--- a/BenPowellPrototype/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/BenPowellPrototype/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -196,7 +196,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/BenPowell/Characters
+ContentBrowserDrawer.SelectedPaths=
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -227,8 +227,8 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
-OpenAssetsAtExit=/Game/BenPowell/BP_MainView.BP_MainView
 OpenAssetsAtExit=/Game/BenPowell/Characters/BP_BaseCharacter.BP_BaseCharacter
+OpenAssetsAtExit=/Game/BenPowell/BP_MainView.BP_MainView
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -245,8 +245,8 @@ MinimapUnloadedOpacity=0.660000
 PerWorldEditorSettings=(("/Game/TopDown/Maps/TopDownMap.TopDownMap", ()))
 
 [RootWindow]
-ScreenPosition=X=1158.000 Y=493.000
-WindowSize=X=1280.000 Y=720.000
+ScreenPosition=X=1158.000 Y=492.667
+WindowSize=X=1282.000 Y=722.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1394,6 +1394,7 @@ ExternalImagePicker.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
+RecentsFiles=C:/Program Files/Epic Games/UE_5.4/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=D:/Unreal Engine/New folder/UE_5.4/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=E:/UE_5.4/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
@@ -2140,10 +2141,11 @@ StaticMeshComponent.ComponentReplication=True
 StaticMeshComponent.Cooking=True
 StaticMeshComponent.Events=True
 StaticMeshComponent.Materials=True
+BP_MainView_C.Default=True
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/BenPowell/Characters/BP_BaseCharacter
-MRUItem1=/Game/BenPowell/BP_MainView
+MRUItem0=/Game/BenPowell/BP_MainView
+MRUItem1=/Game/BenPowell/Characters/BP_BaseCharacter
 MRUItem2=/Game/BenPowell/BP_AutoBGamePlayerController
 MRUItem3=/Game/BenPowell/BP_AutoBGameMode
 MRUItem4=/Game/TopDown/Blueprints/BP_TopDownGameMode
@@ -2396,8 +2398,8 @@ bHostFindInBlueprintsInGlobalTab=True
 bNavigateToNativeFunctionsFromCallNodes=True
 bDoubleClickNavigatesToParent=True
 bEnableTypePromotion=True
-TypePromotionPinDenyList=string
 TypePromotionPinDenyList=text
+TypePromotionPinDenyList=string
 BreakpointReloadMethod=RestoreAll
 bEnablePinValueInspectionTooltips=True
 bEnableNamespaceEditorFeatures=True
