--- a/BenPowellPrototype/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/BenPowellPrototype/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -227,8 +227,8 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
-OpenAssetsAtExit=/Game/BenPowell/Characters/BP_BaseCharacter.BP_BaseCharacter
 OpenAssetsAtExit=/Game/BenPowell/BP_MainView.BP_MainView
+OpenAssetsAtExit=/Game/BenPowell/Characters/BP_BaseCharacter.BP_BaseCharacter
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -246,7 +246,7 @@ PerWorldEditorSettings=(("/Game/TopDown/Maps/TopDownMap.TopDownMap", ()))
 
 [RootWindow]
 ScreenPosition=X=1158.000 Y=492.667
-WindowSize=X=1282.000 Y=722.000
+WindowSize=X=1284.000 Y=724.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1527,7 +1527,7 @@ WorldPartitionRuntimeHashSet=
 StaticMeshActor=StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.InitiativeArray,PropertyWrapper.DefaultValueCategory.InitiativeArray
 BrushComponent=StaticMeshActor.Physics.ConstraintsGroup
 TextRenderActor=TextRenderActor.Materials.MaterialList
-SceneComponent=StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.InitiativeArray,PropertyWrapper.DefaultValueCategory.InitiativeArray
+SceneComponent=
 BP_BaseCharacter_C=StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.InitiativeArray,PropertyWrapper.DefaultValueCategory.InitiativeArray
 K2Node_VariableGet=StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.InitiativeArray,PropertyWrapper.DefaultValueCategory.InitiativeArray
 BP_MainView_C=StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.InitiativeArray,PropertyWrapper.DefaultValueCategory.InitiativeArray
@@ -2398,8 +2398,8 @@ bHostFindInBlueprintsInGlobalTab=True
 bNavigateToNativeFunctionsFromCallNodes=True
 bDoubleClickNavigatesToParent=True
 bEnableTypePromotion=True
-TypePromotionPinDenyList=text
 TypePromotionPinDenyList=string
+TypePromotionPinDenyList=text
 BreakpointReloadMethod=RestoreAll
 bEnablePinValueInspectionTooltips=True
 bEnableNamespaceEditorFeatures=True
