--- a/BenPowellPrototype/Config/DefaultGame.ini
+++ b/BenPowellPrototype/Config/DefaultGame.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=9C9DA8ED4473F11D8435D493BD38F34C
-ProjectName=Top Down BP Game Template
+ProjectName=Ben Powell FMP Prototype
 
 
 [StartupActions]
@@ -9,3 +9,4 @@ InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
 
 [SectionsToSave]
 +Section=StartupActions
+
