--- a/BenPowellPrototype/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/BenPowellPrototype/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -125,7 +125,7 @@ bOneHeadsetEachProcess=False
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=1280,Y=720)
+LastSize=(X=0,Y=0)
 LastExecutedLaunchDevice=Windows@BENIUSPC
 LastExecutedLaunchName=BENIUSPC
 LastExecutedPIEPreviewDevice=
@@ -197,19 +197,19 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/BenPowell/UI
+ContentBrowserDrawer.SelectedPaths=/Game/BenPowell/Characters
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
 ContentBrowserDrawer.ExpandedCollections=
 ContentBrowserDrawer.ThumbnailSize=2
 ContentBrowserDrawer.CurrentViewType=1
-ContentBrowserDrawer.JumpMRU=/All/Game/BenPowell/UI
-ContentBrowserDrawer.JumpMRU=/All/Game/BenPowell
 ContentBrowserDrawer.JumpMRU=/All/Game/BenPowell/Characters
+ContentBrowserDrawer.JumpMRU=/All/Game/BenPowell
+ContentBrowserDrawer.JumpMRU=/All/Game
+ContentBrowserDrawer.JumpMRU=/All/Game/BenPowell/UI
 ContentBrowserDrawer.JumpMRU=/All/Game/TopDown/Blueprints
 ContentBrowserDrawer.JumpMRU=/All/Game/TopDown/Input
-ContentBrowserDrawer.JumpMRU=/All/Game
 ContentBrowserDrawer.JumpMRU=/All/Game/Characters
 ContentBrowserDrawer.JumpMRU=/All/Game/TopDown
 ContentBrowserDrawer.JumpMRU=/All/Game/StarterContent
@@ -222,9 +222,9 @@ LastLevel=/Game/TopDown/Maps/TopDownMap
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -236,8 +236,6 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 OpenAssetsAtExit=/Game/BenPowell/BP_BattleManager.BP_BattleManager
 OpenAssetsAtExit=/Game/BenPowell/Characters/BP_BaseCharacter.BP_BaseCharacter
-OpenAssetsAtExit=/Game/BenPowell/BP_MainView.BP_MainView
-OpenAssetsAtExit=/Game/BenPowell/UI/GamerOver.GamerOver
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -254,9 +252,9 @@ MinimapUnloadedOpacity=0.660000
 PerWorldEditorSettings=(("/Game/TopDown/Maps/TopDownMap.TopDownMap", ()))
 
 [RootWindow]
-ScreenPosition=X=-8.000 Y=0.000
-WindowSize=X=1284.000 Y=724.000
-InitiallyMaximized=True
+ScreenPosition=X=634.667 Y=330.667
+WindowSize=X=1286.000 Y=726.000
+InitiallyMaximized=False
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -1405,8 +1403,8 @@ SequencerWidgets.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
-RecentsFiles=D:/Unreal Engine/New folder/UE_5.4/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/Program Files/Epic Games/UE_5.4/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+RecentsFiles=D:/Unreal Engine/New folder/UE_5.4/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=E:/UE_5.4/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [MRU]
@@ -2626,10 +2624,10 @@ GamerOver_C.Navigation=True
 TextBlock.Clipping=True
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/BenPowell/UI/GamerOver
-MRUItem1=/Game/BenPowell/BP_MainView
-MRUItem2=/Game/BenPowell/Characters/BP_BaseCharacter
-MRUItem3=/Game/BenPowell/BP_BattleManager
+MRUItem0=/Game/BenPowell/Characters/BP_BaseCharacter
+MRUItem1=/Game/BenPowell/BP_BattleManager
+MRUItem2=/Game/BenPowell/UI/GamerOver
+MRUItem3=/Game/BenPowell/BP_MainView
 MRUItem4=/Game/BenPowell/BP_AutoBGameMode
 MRUItem5=/Engine/EditorBlueprintResources/StandardMacros
 MRUItem6=/Game/BenPowell/Characters/BPC_Hero
@@ -2744,7 +2742,7 @@ ShaderPlatformQualitySettings=True
 
 [DetailPropertyExpansion]
 InputSettings="\"Object\" \"Object.Bindings.ActionMappings.ActionMappings[0]\" \"Object.Platforms.PlatformSettings\" \"Object.Platforms.PlatformSettings.Settings.Settings[0].Object.Device Properties\" \"Object.Platforms.PlatformSettings.Settings.Settings[0].Object.Device Properties.Device Properties|Trigger Feedback\" \"Object.Platforms.PlatformSettings.Settings.Settings[0].Object.Device Properties.Device Properties|Trigger Vibration\" \"Object.Platforms.PlatformSettings.Settings.Settings[0].Object.Hardware\" \"Object.Platforms.PlatformSettings.Settings.Settings[0].Object.Hardware.HardwareDevices\" \"Object.Platforms.PlatformSettings.Settings.Settings[0].Object.Hardware.HardwareDevices.HardwareDevices[0]\" \"Object.Platforms.PlatformSettings.Settings.Settings[0].Object.Hardware.HardwareDevices.HardwareDevices[1]\" \"Object.Platforms.PlatformSettings.Settings.Settings[0].Object.Hardware.HardwareDevices.HardwareDevices[2]\" \"Object.Platforms.PlatformSettings.Settings.Settings[0].Object.Hardware.HardwareDevices.HardwareDevices[3]\" \"Object.Platforms.PlatformSettings.Settings.Settings[1].Object.Device Properties\" \"Object.Platforms.PlatformSettings.Settings.Settings[1].Object.Device Properties.Device Properties|Trigger Feedback\" \"Object.Platforms.PlatformSettings.Settings.Settings[1].Object.Device Properties.Device Properties|Trigger Vibration\" \"Object.Platforms.PlatformSettings.Settings.Settings[1].Object.Hardware\" \"Object.Platforms.PlatformSettings.Settings.Settings[1].Object.Hardware.HardwareDevices\" \"Object.Platforms.PlatformSettings.Settings.Settings[1].Object.Hardware.HardwareDevices.HardwareDevices[0]\" \"Object.Platforms.PlatformSettings.Settings.Settings[1].Object.Hardware.HardwareDevices.HardwareDevices[1]\" \"Object.Platforms.PlatformSettings.Settings.Settings[1].Object.Hardware.HardwareDevices.HardwareDevices[2]\" \"Object.Platforms.PlatformSettings.Settings.Settings[1].Object.Hardware.HardwareDevices.HardwareDevices[3]\" \"Object.Platforms.PlatformSettings.Settings.Settings[2].Object.Device Properties\" \"Object.Platforms.PlatformSettings.Settings.Settings[2].Object.Device Properties.Device Properties|Trigger Feedback\" \"Object.Platforms.PlatformSettings.Settings.Settings[2].Object.Device Properties.Device Properties|Trigger Vibration\" \"Object.Platforms.PlatformSettings.Settings.Settings[2].Object.Hardware\" \"Object.Platforms.PlatformSettings.Settings.Settings[2].Object.Hardware.HardwareDevices\" \"Object.Platforms.PlatformSettings.Settings.Settings[2].Object.Hardware.HardwareDevices.HardwareDevices[0]\" \"Object.Platforms.PlatformSettings.Settings.Settings[2].Object.Hardware.HardwareDevices.HardwareDevices[1]\" \"Object.Platforms.PlatformSettings.Settings.Settings[2].Object.Hardware.HardwareDevices.HardwareDevices[2]\" \"Object.Platforms.PlatformSettings.Settings.Settings[2].Object.Hardware.HardwareDevices.HardwareDevices[3]\" \"Object.Platforms.PlatformSettings.Settings.Settings[3].Object.Device Properties\" \"Object.Platforms.PlatformSettings.Settings.Settings[3].Object.Device Properties.Device Properties|Trigger Feedback\" \"Object.Platforms.PlatformSettings.Settings.Settings[3].Object.Device Properties.Device Properties|Trigger Vibration\" \"Object.Platforms.PlatformSettings.Settings.Settings[3].Object.Hardware\" \"Object.Platforms.PlatformSettings.Settings.Settings[3].Object.Hardware.HardwareDevices\" \"Object.Platforms.PlatformSettings.Settings.Settings[3].Object.Hardware.HardwareDevices.HardwareDevices[0]\" \"Object.Platforms.PlatformSettings.Settings.Settings[3].Object.Hardware.HardwareDevices.HardwareDevices[1]\" \"Object.Platforms.PlatformSettings.Settings.Settings[3].Object.Hardware.HardwareDevices.HardwareDevices[2]\" \"Object.Platforms.PlatformSettings.Settings.Settings[3].Object.Hardware.HardwareDevices.HardwareDevices[3]\" \"Object.Platforms.PlatformSettings.Settings.Settings[4].Object.Device Properties\" \"Object.Platforms.PlatformSettings.Settings.Settings[4].Object.Device Properties.Device Properties|Trigger Feedback\" \"Object.Platforms.PlatformSettings.Settings.Settings[4].Object.Device Properties.Device Properties|Trigger Vibration\" \"Object.Platforms.PlatformSettings.Settings.Settings[4].Object.Hardware\" \"Object.Platforms.PlatformSettings.Settings.Settings[4].Object.Hardware.HardwareDevices\" \"Object.Platforms.PlatformSettings.Settings.Settings[4].Object.Hardware.HardwareDevices.HardwareDevices[0]\" \"Object.Platforms.PlatformSettings.Settings.Settings[4].Object.Hardware.HardwareDevices.HardwareDevices[1]\" \"Object.Platforms.PlatformSettings.Settings.Settings[4].Object.Hardware.HardwareDevices.HardwareDevices[2]\" \"Object.Platforms.PlatformSettings.Settings.Settings[4].Object.Hardware.HardwareDevices.HardwareDevices[3]\" \"Object.Platforms.PlatformSettings.Settings.Settings[5].Object.Device Properties\" \"Object.Platforms.PlatformSettings.Settings.Settings[5].Object.Device Properties.Device Properties|Trigger Feedback\" \"Object.Platforms.PlatformSettings.Settings.Settings[5].Object.Device Properties.Device Properties|Trigger Vibration\" \"Object.Platforms.PlatformSettings.Settings.Settings[5].Object.Hardware\" \"Object.Platforms.PlatformSettings.Settings.Settings[5].Object.Hardware.HardwareDevices\" \"Object.Platforms.PlatformSettings.Settings.Settings[5].Object.Hardware.HardwareDevices.HardwareDevices[0]\" \"Object.Platforms.PlatformSettings.Settings.Settings[5].Object.Hardware.HardwareDevices.HardwareDevices[1]\" \"Object.Platforms.PlatformSettings.Settings.Settings[5].Object.Hardware.HardwareDevices.HardwareDevices[2]\" \"Object.Platforms.PlatformSettings.Settings.Settings[5].Object.Hardware.HardwareDevices.HardwareDevices[3]\" \"Object.Platforms.PlatformSettings.Settings.Settings[6].Object.Device Properties\" \"Object.Platforms.PlatformSettings.Settings.Settings[6].Object.Device Properties.Device Properties|Trigger Feedback\" \"Object.Platforms.PlatformSettings.Settings.Settings[6].Object.Device Properties.Device Properties|Trigger Vibration\" \"Object.Platforms.PlatformSettings.Settings.Settings[6].Object.Hardware\" \"Object.Platforms.PlatformSettings.Settings.Settings[6].Object.Hardware.HardwareDevices\" \"Object.Platforms.PlatformSettings.Settings.Settings[6].Object.Hardware.HardwareDevices.HardwareDevices[0]\" \"Object.Console.ConsoleKeys\" "
-Object="\"Object\" \"Object.Layout.Slot\" "
+Object="\"Object\" "
 AnimationSettings="\"Object\" \"Object.Mirroring.MirrorFindReplaceExpressions\" \"Object.Mirroring.MirrorFindReplaceExpressions.MirrorFindReplaceExpressions[0]\" \"Object.Mirroring.MirrorFindReplaceExpressions.MirrorFindReplaceExpressions[1]\" \"Object.Mirroring.MirrorFindReplaceExpressions.MirrorFindReplaceExpressions[10]\" \"Object.Mirroring.MirrorFindReplaceExpressions.MirrorFindReplaceExpressions[11]\" \"Object.Mirroring.MirrorFindReplaceExpressions.MirrorFindReplaceExpressions[12]\" \"Object.Mirroring.MirrorFindReplaceExpressions.MirrorFindReplaceExpressions[13]\" \"Object.Mirroring.MirrorFindReplaceExpressions.MirrorFindReplaceExpressions[14]\" \"Object.Mirroring.MirrorFindReplaceExpressions.MirrorFindReplaceExpressions[15]\" \"Object.Mirroring.MirrorFindReplaceExpressions.MirrorFindReplaceExpressions[16]\" \"Object.Mirroring.MirrorFindReplaceExpressions.MirrorFindReplaceExpressions[17]\" \"Object.Mirroring.MirrorFindReplaceExpressions.MirrorFindReplaceExpressions[18]\" \"Object.Mirroring.MirrorFindReplaceExpressions.MirrorFindReplaceExpressions[19]\" \"Object.Mirroring.MirrorFindReplaceExpressions.MirrorFindReplaceExpressions[2]\" \"Object.Mirroring.MirrorFindReplaceExpressions.MirrorFindReplaceExpressions[20]\" \"Object.Mirroring.MirrorFindReplaceExpressions.MirrorFindReplaceExpressions[3]\" \"Object.Mirroring.MirrorFindReplaceExpressions.MirrorFindReplaceExpressions[4]\" \"Object.Mirroring.MirrorFindReplaceExpressions.MirrorFindReplaceExpressions[5]\" \"Object.Mirroring.MirrorFindReplaceExpressions.MirrorFindReplaceExpressions[6]\" \"Object.Mirroring.MirrorFindReplaceExpressions.MirrorFindReplaceExpressions[7]\" \"Object.Mirroring.MirrorFindReplaceExpressions.MirrorFindReplaceExpressions[8]\" \"Object.Mirroring.MirrorFindReplaceExpressions.MirrorFindReplaceExpressions[9]\" "
 DeveloperSettings="\"Object\" "
 AudioSettings="\"Object\" \"Object.Quality.QualityLevels\" \"Object.Quality.QualityLevels.QualityLevels[0]\" "
@@ -3020,8 +3018,8 @@ bHostFindInBlueprintsInGlobalTab=True
 bNavigateToNativeFunctionsFromCallNodes=True
 bDoubleClickNavigatesToParent=True
 bEnableTypePromotion=True
-TypePromotionPinDenyList=text
 TypePromotionPinDenyList=string
+TypePromotionPinDenyList=text
 BreakpointReloadMethod=RestoreAll
 bEnablePinValueInspectionTooltips=True
 bEnableNamespaceEditorFeatures=True
