--- a/BenPowellPrototype/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/BenPowellPrototype/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -199,20 +199,20 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/BenPowell/Characters/Hero
+ContentBrowserDrawer.SelectedPaths=/Game/BenPowell/Characters/Items
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
 ContentBrowserDrawer.ExpandedCollections=
 ContentBrowserDrawer.ThumbnailSize=2
 ContentBrowserDrawer.CurrentViewType=1
-ContentBrowserDrawer.JumpMRU=/All/Game/BenPowell/Characters/Hero
+ContentBrowserDrawer.JumpMRU=/All/Game/BenPowell/Characters/Items
 ContentBrowserDrawer.JumpMRU=/All/Game/BenPowell/Characters
 ContentBrowserDrawer.JumpMRU=/All/Game/BenPowell/Characters/Enemies
-ContentBrowserDrawer.JumpMRU=/All/Game/BenPowell/Characters/Items/Woops
-ContentBrowserDrawer.JumpMRU=/All/Game/BenPowell/Characters/Items
-ContentBrowserDrawer.JumpMRU=/All/Game/BenPowell/UI
 ContentBrowserDrawer.JumpMRU=/All/Game/BenPowell
+ContentBrowserDrawer.JumpMRU=/All/Game/BenPowell/Characters/Hero
+ContentBrowserDrawer.JumpMRU=/All/Game/BenPowell/Characters/Items/Woops
+ContentBrowserDrawer.JumpMRU=/All/Game/BenPowell/UI
 ContentBrowserDrawer.JumpMRU=/All/Game/BenPowell/FunctionLibrary
 ContentBrowserDrawer.JumpMRU=/All/Game/BenPowell/NewFolder
 ContentBrowserDrawer.JumpMRU=/All/Game
@@ -230,6 +230,8 @@ LastLevel=/Game/TopDown/Maps/TopDownMap
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
+RecentAssetEditors=UserDefinedStructureEditor
+RecentAssetEditors=UserDefinedStructureEditor
 RecentAssetEditors=DataTableEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -242,14 +244,12 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=UserDefinedStructureEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=DataTableEditor
-RecentAssetEditors=UserDefinedStructureEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
@@ -257,16 +257,11 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
-OpenAssetsAtExit=/Game/BenPowell/BP_AutoBGamePlayerController.BP_AutoBGamePlayerController
-OpenAssetsAtExit=/Game/BenPowell/BP_AutoBGameMode.BP_AutoBGameMode
-OpenAssetsAtExit=/Game/BenPowell/UI/EquipMenu.EquipMenu
-OpenAssetsAtExit=/Game/BenPowell/BP_BattleManager.BP_BattleManager
-OpenAssetsAtExit=/Game/BenPowell/BP_MenuManager.BP_MenuManager
-OpenAssetsAtExit=/Game/BenPowell/Characters/Items/ItemManager.ItemManager
-OpenAssetsAtExit=/Game/BenPowell/BP_MainView.BP_MainView
-OpenAssetsAtExit=/Game/BenPowell/Characters/BP_BaseCharacter.BP_BaseCharacter
 OpenAssetsAtExit=/Game/BenPowell/Characters/BPC_Hero.BPC_Hero
+OpenAssetsAtExit=/Game/BenPowell/BP_BattleManager.BP_BattleManager
 OpenAssetsAtExit=/Game/BenPowell/Characters/Enemies/EnemyDataTable.EnemyDataTable
+OpenAssetsAtExit=/Game/BenPowell/Characters/Enemies/EnemyStat.EnemyStat
+OpenAssetsAtExit=/Game/BenPowell/Characters/Items/itemValues.itemValues
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -283,8 +278,8 @@ MinimapUnloadedOpacity=0.660000
 PerWorldEditorSettings=(("/Game/TopDown/Maps/TopDownMap.TopDownMap", ()))
 
 [RootWindow]
-ScreenPosition=X=145.000 Y=17.000
-WindowSize=X=1290.000 Y=730.000
+ScreenPosition=X=144.667 Y=16.667
+WindowSize=X=1292.000 Y=732.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1440,8 +1435,8 @@ DataTableEditor.LastCompileMethod=External
 
 [Python]
 LastDirectory=
-RecentsFiles=D:/Unreal Engine/New folder/UE_5.4/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/Program Files/Epic Games/UE_5.4/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+RecentsFiles=D:/Unreal Engine/New folder/UE_5.4/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=E:/UE_5.4/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [MRU]
@@ -1575,7 +1570,7 @@ BrushComponent=StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.Defau
 TextRenderActor=TextRenderActor.Materials.MaterialList
 SceneComponent=
 BP_BaseCharacter_C=StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.InitiativeArray,K2Node_VariableSet.DefaultValueCategory.Struct,K2Node_CallFunction.Inputs.F826DBC74AB3C5D2B288DB9B6813A239,PropertyWrapper.DefaultValueCategory.InitiativeArray,PropertyWrapper.DefaultValueCategory.Struct,PropertyWrapper.DefaultValueCategory.Max Stats,MulticastInlineDelegatePropertyWrapper.DelegateInputs.49DCC4014E9C1B044E77C390328B6C93
-K2Node_VariableGet=StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.InitiativeArray,K2Node_VariableSet.DefaultValueCategory.Struct,K2Node_CallFunction.Inputs.F826DBC74AB3C5D2B288DB9B6813A239,PropertyWrapper.DefaultValueCategory.InitiativeArray,PropertyWrapper.DefaultValueCategory.Struct,MulticastInlineDelegatePropertyWrapper.DelegateInputs.49DCC4014E9C1B044E77C390328B6C93
+K2Node_VariableGet=StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.InitiativeArray,K2Node_VariableGet.DefaultValueCategory.AliveTags,K2Node_VariableSet.DefaultValueCategory.Struct,K2Node_CallFunction.Inputs.F826DBC74AB3C5D2B288DB9B6813A239,PropertyWrapper.DefaultValueCategory.InitiativeArray,PropertyWrapper.DefaultValueCategory.Struct,MulticastInlineDelegatePropertyWrapper.DelegateInputs.49DCC4014E9C1B044E77C390328B6C93
 BP_MainView_C=StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.InitiativeArray,K2Node_CallFunction.Inputs.F826DBC74AB3C5D2B288DB9B6813A239,PropertyWrapper.DefaultValueCategory.InitiativeArray,MulticastInlineDelegatePropertyWrapper.DelegateInputs.49DCC4014E9C1B044E77C390328B6C93
 PropertyWrapper=StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.InitiativeArray,K2Node_VariableSet.DefaultValueCategory.Struct,K2Node_CallFunction.Inputs.F826DBC74AB3C5D2B288DB9B6813A239,PropertyWrapper.DefaultValueCategory.InitiativeArray,PropertyWrapper.DefaultValueCategory.Struct,PropertyWrapper.DefaultValueCategory.Max Stats,PropertyWrapper.DefaultValueCategory.AliveTags,MulticastInlineDelegatePropertyWrapper.DelegateInputs.49DCC4014E9C1B044E77C390328B6C93
 K2Node_VariableSet=StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.InitiativeArray,K2Node_VariableSet.DefaultValueCategory.Struct,K2Node_CallFunction.Inputs.F826DBC74AB3C5D2B288DB9B6813A239,PropertyWrapper.DefaultValueCategory.InitiativeArray,PropertyWrapper.DefaultValueCategory.Struct,PropertyWrapper.DefaultValueCategory.Max Stats,MulticastInlineDelegatePropertyWrapper.DelegateInputs.49DCC4014E9C1B044E77C390328B6C93
@@ -1584,15 +1579,15 @@ K2Node_CustomEvent=StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.D
 EdGraphNode=StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.InitiativeArray,K2Node_VariableSet.DefaultValueCategory.Struct,K2Node_CallFunction.Inputs.F826DBC74AB3C5D2B288DB9B6813A239,PropertyWrapper.DefaultValueCategory.InitiativeArray,PropertyWrapper.DefaultValueCategory.Struct,MulticastInlineDelegatePropertyWrapper.DelegateInputs.49DCC4014E9C1B044E77C390328B6C93
 K2Node_MacroInstance=StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.InitiativeArray,K2Node_CallFunction.Inputs.F826DBC74AB3C5D2B288DB9B6813A239,PropertyWrapper.DefaultValueCategory.InitiativeArray,MulticastInlineDelegatePropertyWrapper.DelegateInputs.49DCC4014E9C1B044E77C390328B6C93
 K2Node_CallFunction=StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.InitiativeArray,K2Node_VariableSet.DefaultValueCategory.Struct,K2Node_CallFunction.Inputs.F826DBC74AB3C5D2B288DB9B6813A239,PropertyWrapper.DefaultValueCategory.InitiativeArray,PropertyWrapper.DefaultValueCategory.Struct,MulticastInlineDelegatePropertyWrapper.DelegateInputs.49DCC4014E9C1B044E77C390328B6C93
-BPC_Enemy_C=StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.InitiativeArray,K2Node_VariableSet.DefaultValueCategory.Struct,K2Node_CallFunction.Inputs.F826DBC74AB3C5D2B288DB9B6813A239,PropertyWrapper.DefaultValueCategory.InitiativeArray,PropertyWrapper.DefaultValueCategory.Struct,MulticastInlineDelegatePropertyWrapper.DelegateInputs.49DCC4014E9C1B044E77C390328B6C93
+BPC_Enemy_C=StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.InitiativeArray,K2Node_VariableGet.DefaultValueCategory.AliveTags,K2Node_VariableSet.DefaultValueCategory.Struct,K2Node_CallFunction.Inputs.F826DBC74AB3C5D2B288DB9B6813A239,PropertyWrapper.DefaultValueCategory.InitiativeArray,PropertyWrapper.DefaultValueCategory.Struct,PropertyWrapper.DefaultValueCategory.Max Stats,PropertyWrapper.DefaultValueCategory.AliveTags,MulticastInlineDelegatePropertyWrapper.DelegateInputs.49DCC4014E9C1B044E77C390328B6C93
 K2Node_CallParentFunction=StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.InitiativeArray,K2Node_CallFunction.Inputs.F826DBC74AB3C5D2B288DB9B6813A239,PropertyWrapper.DefaultValueCategory.InitiativeArray,MulticastInlineDelegatePropertyWrapper.DelegateInputs.49DCC4014E9C1B044E77C390328B6C93
-BP_BattleManager_C=
+BP_BattleManager_C=StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.InitiativeArray,K2Node_VariableGet.DefaultValueCategory.AliveTags,K2Node_VariableSet.DefaultValueCategory.Struct,K2Node_CallFunction.Inputs.F826DBC74AB3C5D2B288DB9B6813A239,PropertyWrapper.DefaultValueCategory.InitiativeArray,PropertyWrapper.DefaultValueCategory.Struct,PropertyWrapper.DefaultValueCategory.Max Stats,PropertyWrapper.DefaultValueCategory.AliveTags,MulticastInlineDelegatePropertyWrapper.DelegateInputs.49DCC4014E9C1B044E77C390328B6C93
 EdGraph=StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.InitiativeArray,K2Node_CallFunction.Inputs.F826DBC74AB3C5D2B288DB9B6813A239,PropertyWrapper.DefaultValueCategory.InitiativeArray,MulticastInlineDelegatePropertyWrapper.DelegateInputs.49DCC4014E9C1B044E77C390328B6C93
 K2Node_FunctionEntry=StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.InitiativeArray,PropertyWrapper.DefaultValueCategory.InitiativeArray
 K2Node_FunctionResult=StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.InitiativeArray,K2Node_CallFunction.Inputs.F826DBC74AB3C5D2B288DB9B6813A239,PropertyWrapper.DefaultValueCategory.InitiativeArray,MulticastInlineDelegatePropertyWrapper.DelegateInputs.49DCC4014E9C1B044E77C390328B6C93
 GameNetworkManager=StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.InitiativeArray,PropertyWrapper.DefaultValueCategory.InitiativeArray
 BillboardComponent=StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.InitiativeArray,K2Node_CallFunction.Inputs.F826DBC74AB3C5D2B288DB9B6813A239,PropertyWrapper.DefaultValueCategory.InitiativeArray,MulticastInlineDelegatePropertyWrapper.DelegateInputs.49DCC4014E9C1B044E77C390328B6C93
-BPC_Hero_C=
+BPC_Hero_C=StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.InitiativeArray,K2Node_VariableGet.DefaultValueCategory.AliveTags,K2Node_VariableSet.DefaultValueCategory.Struct,K2Node_CallFunction.Inputs.F826DBC74AB3C5D2B288DB9B6813A239,PropertyWrapper.DefaultValueCategory.InitiativeArray,PropertyWrapper.DefaultValueCategory.Struct,PropertyWrapper.DefaultValueCategory.Max Stats,PropertyWrapper.DefaultValueCategory.AliveTags,MulticastInlineDelegatePropertyWrapper.DelegateInputs.49DCC4014E9C1B044E77C390328B6C93
 TextRenderComponent=StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.InitiativeArray,K2Node_CallFunction.Inputs.F826DBC74AB3C5D2B288DB9B6813A239,PropertyWrapper.DefaultValueCategory.InitiativeArray
 EditorStyleSettings=InputSettings.Platforms.InputPlatformSettings_Windows,InputSettings.Platforms.InputPlatformSettings_Android,InputSettings.Platforms.InputPlatformSettings_IOS,InputSettings.Platforms.InputPlatformSettings_Linux,InputSettings.Platforms.InputPlatformSettings_LinuxArm64,InputSettings.Platforms.InputPlatformSettings_Mac,InputSettings.Platforms.InputPlatformSettings_TVOS,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Next Action,IOSRuntimeSettings.Remote Build.Remote Build Options,IOSRuntimeSettings.Remote Build.Secondary Remote Build Options,GameMapsSettings.DefaultModes.SelectedGameModeDetails,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierSmoothDelta,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,TakeRecorderProjectSettings.Audio Input Device.AudioInputDevice,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod
 SlateThemeManager=
@@ -2848,26 +2843,26 @@ BP_AutoBGamePlayerController_C.Networking=True
 K2Node_GetClassDefaults.PinOptions=True
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/BenPowell/Characters/Enemies/EnemyDataTable
-MRUItem1=/Game/BenPowell/Characters/BPC_Hero
-MRUItem2=/Game/BenPowell/Characters/BP_BaseCharacter
-MRUItem3=/Game/BenPowell/BP_MainView
-MRUItem4=/Game/BenPowell/Characters/Items/ItemManager
-MRUItem5=/Game/BenPowell/BP_MenuManager
-MRUItem6=/Game/BenPowell/BP_BattleManager
-MRUItem7=/Game/BenPowell/UI/EquipMenu
-MRUItem8=/Game/BenPowell/BP_AutoBGameMode
-MRUItem9=/Game/BenPowell/BP_AutoBGamePlayerController
-MRUItem10=/Game/BenPowell/FunctionLibrary/DataTableFunctions
-MRUItem11=/Game/BenPowell/Characters/BPC_Enemy
-MRUItem12=/Game/BenPowell/Characters/Enemies/EnemyStat
-MRUItem13=/Game/BenPowell/Characters/Items/Woops/BaseInventoryItem
-MRUItem14=/Game/BenPowell/Characters/Items/Woops/BigArmour
-MRUItem15=/Game/BenPowell/Characters/Items/Woops/BigArmourComponent
-MRUItem16=/Game/BenPowell/Characters/Items/Woops/BigSword
-MRUItem17=/Game/BenPowell/Characters/Items/Woops/InventoryComponent
-MRUItem18=/Game/BenPowell/Characters/Items/InventoryItemsTable
-MRUItem19=/Game/BenPowell/Characters/Items/itemValues
+MRUItem0=/Game/BenPowell/Characters/Items/itemValues
+MRUItem1=/Game/BenPowell/Characters/Enemies/EnemyStat
+MRUItem2=/Game/BenPowell/Characters/Enemies/EnemyDataTable
+MRUItem3=/Game/BenPowell/BP_BattleManager
+MRUItem4=/Game/BenPowell/Characters/BPC_Hero
+MRUItem5=/Game/BenPowell/Characters/BP_BaseCharacter
+MRUItem6=/Game/BenPowell/BP_MainView
+MRUItem7=/Game/BenPowell/Characters/Items/ItemManager
+MRUItem8=/Game/BenPowell/BP_MenuManager
+MRUItem9=/Game/BenPowell/UI/EquipMenu
+MRUItem10=/Game/BenPowell/BP_AutoBGameMode
+MRUItem11=/Game/BenPowell/BP_AutoBGamePlayerController
+MRUItem12=/Game/BenPowell/FunctionLibrary/DataTableFunctions
+MRUItem13=/Game/BenPowell/Characters/BPC_Enemy
+MRUItem14=/Game/BenPowell/Characters/Items/Woops/BaseInventoryItem
+MRUItem15=/Game/BenPowell/Characters/Items/Woops/BigArmour
+MRUItem16=/Game/BenPowell/Characters/Items/Woops/BigArmourComponent
+MRUItem17=/Game/BenPowell/Characters/Items/Woops/BigSword
+MRUItem18=/Game/BenPowell/Characters/Items/Woops/InventoryComponent
+MRUItem19=/Game/BenPowell/Characters/Items/InventoryItemsTable
 MRUItem20=/Game/BenPowell/UI/StartMenu
 MRUItem21=/Game/BenPowell/UI/Opening
 MRUItem22=/Game/BenPowell/UI/GamerOver
@@ -3135,7 +3130,7 @@ K2Node_InputKey="\"Object\" "
 BP_MainView_C=
 Pawn=
 StaticMeshComponent="\"Object\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
-BP_BattleManager_C="\"Object.AliveTags\" "
+BP_BattleManager_C=
 GameNetworkManager="\"Object\" "
 BillboardComponent="\"Object\" "
 TextRenderComponent="\"Object\" \"Object.Lighting.LightingChannels\" "
@@ -3231,7 +3226,7 @@ K2Node_StructOperation="\"Object\" "
 K2Node_Variable="\"Object\" "
 K2Node_BreakStruct="\"Object\" "
 K2Node_StructMemberGet="\"Object\" "
-BPC_Hero_C=
+BPC_Hero_C="\"Object\" \"Object.Actor.Tags\" "
 BP_BaseCharacter_C="\"Object\" \"Object.Actor.Tags\" "
 BPC_Enemy_C="\"Object\" \"Object.Actor.Tags\" "
 K2Node_GetClassDefaults="\"Object\" "
@@ -3313,8 +3308,8 @@ bHostFindInBlueprintsInGlobalTab=True
 bNavigateToNativeFunctionsFromCallNodes=True
 bDoubleClickNavigatesToParent=True
 bEnableTypePromotion=True
-TypePromotionPinDenyList=text
 TypePromotionPinDenyList=string
+TypePromotionPinDenyList=text
 BreakpointReloadMethod=RestoreAll
 bEnablePinValueInspectionTooltips=True
 bEnableNamespaceEditorFeatures=True
