Setting up branch

--- a/BenPowellPrototype/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/BenPowellPrototype/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -228,7 +228,7 @@ AssetPropertyPicker.CurrentViewType=0
 LastLevel=/Game/TopDown/Maps/TopDownMap
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 DebuggerAttached=False
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
@@ -257,16 +257,6 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
-OpenAssetsAtExit=/Game/BenPowell/BP_AutoBGameMode.BP_AutoBGameMode
-OpenAssetsAtExit=/Game/BenPowell/BP_AutoBGamePlayerController.BP_AutoBGamePlayerController
-OpenAssetsAtExit=/Game/BenPowell/BP_BattleManager.BP_BattleManager
-OpenAssetsAtExit=/Game/BenPowell/Characters/BPC_Enemy.BPC_Enemy
-OpenAssetsAtExit=/Game/BenPowell/Characters/BP_BaseCharacter.BP_BaseCharacter
-OpenAssetsAtExit=/Game/BenPowell/Characters/BPC_Hero.BPC_Hero
-OpenAssetsAtExit=/Game/BenPowell/BP_MenuManager.BP_MenuManager
-OpenAssetsAtExit=/Game/BenPowell/UI/StartMenu.StartMenu
-OpenAssetsAtExit=/Game/BenPowell/FunctionLibrary/DataTableFunctions.DataTableFunctions
-OpenAssetsAtExit=/Game/BenPowell/Characters/Items/ItemManager.ItemManager
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -283,7 +273,7 @@ MinimapUnloadedOpacity=0.660000
 PerWorldEditorSettings=(("/Game/TopDown/Maps/TopDownMap.TopDownMap", ()))
 
 [RootWindow]
-ScreenPosition=X=144.667 Y=16.667
+ScreenPosition=X=144.000 Y=16.000
 WindowSize=X=1292.000 Y=732.000
 InitiallyMaximized=True
 
